--- a/Neos.Media.Browser/Resources/Private/Templates/Asset/RelatedNodes.html
+++ b/Neos.Media.Browser/Resources/Private/Templates/Asset/RelatedNodes.html
@@ -5,155 +5,130 @@
 <f:section name="Title">Related nodes</f:section>
 
 <f:section name="Content">
-	<div class="neos-media-options">
-		<legend>{neos:backend.translate(id: 'relatedNodes.referencesTo', package: 'Neos.Media.Browser', arguments: {asset: asset.label})}
-			({neos:backend.translate(id: 'relatedNodes', quantity: '{asset.usageCount}', arguments: {0:asset.usageCount}, package: 'Neos.Media.Browser')})
-		</legend>
-	</div>
+	<legend>{neos:backend.translate(id: 'relatedNodes.referencesTo', package: 'Neos.Media.Browser', arguments: {asset: asset.label})}</legend>
 
-	<f:if condition="{inaccessibleRelations}">
-		<table class="neos-table neos-no-hover fold-{site.site.nodeName}">
-			<thead>
+	<table class="neos-table neos-no-hover">
+		<thead>
 			<tr>
 				<th>{neos:backend.translate(id: 'document', package: 'Neos.Neos')}</th>
+				<th>{neos:backend.translate(id: 'reference', package: 'Neos.Neos')}</th>
+				<th>&nbsp;</th>
+				<f:if condition="{contentDimensions}">
+					<th>{neos:backend.translate(id: 'contentDimensions', package: 'Neos.Neos')}</th>
+				</f:if>
 				<th>{neos:backend.translate(id: 'workspace', package: 'Neos.Neos')}</th>
+				<th class="neos-aRight">{neos:backend.translate(id: 'lastModification', package: 'Neos.Neos')}</th>
 			</tr>
-			</thead>
-			<tbody>
-			<f:for each="{inaccessibleRelations}" as="inaccessibleRelation">
-				<tr>
-					<td>
-						<f:if condition="{inaccessibleRelation.type} == {nodeUsageClass}">
-							<f:then>
-								{neos:backend.translate(id: inaccessibleRelation.nodeType.label)} ({inaccessibleRelation.nodeIdentifier})
-							</f:then>
-							<f:else>
-								---
-							</f:else>
-						</f:if>
-					</td>
-					<td>
-						<f:switch expression="{true}">
-							<f:case value="{inaccessibleRelation.workspace.personalWorkspace}">
-								<i class="icon-user"
-								   title="{neos:backend.translate(id: 'workspaces.personalWorkspace', source: 'Modules', package: 'Neos.Neos')}"
-								   data-neos-toggle="tooltip"></i>
-								{neos:backend.translate(id: 'workspaces.personalWorkspace', source: 'Modules', package: 'Neos.Neos')}
-							</f:case>
-							<f:case value="{inaccessibleRelation.workspace.privateWorkspace}">
-								<i class="icon-shield"
-								   title="{neos:backend.translate(id: 'workspaces.privateWorkspace', source: 'Modules', package: 'Neos.Neos')}"
-								   data-neos-toggle="tooltip"></i>
-								{neos:backend.translate(id: 'workspaces.privateWorkspace', source: 'Modules', package:
-								'Neos.Neos')}
-							</f:case>
-							<f:case value="{inaccessibleRelation.workspace.internalWorkspace}">
-								<i class="icon-group"
-								   title="{neos:backend.translate(id: 'workspaces.internalWorkspace', source: 'Modules', package: 'Neos.Neos')}"
-								   data-neos-toggle="tooltip"></i>
-								{neos:backend.translate(id: 'workspaces.internalWorkspace', source: 'Modules', package:
-								'Neos.Neos')}
-							</f:case>
-							<f:defaultCase>
-								---
-							</f:defaultCase>
-						</f:switch>
-					</td>
-				</tr>
-			</f:for>
-			</tbody>
-		</table>
-	</f:if>
-
-
-	<f:for each="{relatedNodes}" as="site">
-		<div class="neos-folder">
-			<span title="{site.site.nodeName}" class="neos-label" data-neos-toggle="tooltip">{site.site.name}</span>
-			<i class="fold-toggle icon-chevron-up icon-white" data-toggle=".fold-{site.site.nodeName}"></i>
-		</div>
-
-		<table class="neos-table neos-no-hover fold-{site.site.nodeName}">
-			<thead>
-				<tr>
-					<th>{neos:backend.translate(id: 'document', package: 'Neos.Neos')}</th>
-					<th>{neos:backend.translate(id: 'reference', package: 'Neos.Neos')}</th>
-					<th>&nbsp;
-						<f:if condition="{contentDimensions}">
-							{neos:backend.translate(id: 'contentDimensions', package: 'Neos.Neos')}
-						</f:if>
-					</th>
-					<th>{neos:backend.translate(id: 'workspace', package: 'Neos.Neos')}</th>
-					<th class="neos-aRight">{neos:backend.translate(id: 'lastModification', package: 'Neos.Neos')}</th>
-				</tr>
-			</thead>
-			<tbody>
-					<f:for each="{site.nodes}" as="nodeInformation">
-						<tr >
-							<td>
-								<f:if condition="{nodeInformation.documentNode.nodeType.ui.icon}">
-									<i class="{nodeInformation.documentNode.nodeType.ui.icon}" title="{f:if(condition: nodeInformation.documentNode.nodeType.label, then: '{neos:backend.translate(id: nodeInformation.documentNode.nodeType.label, package: \'Neos.Neos\')}', else: nodeInformation.documentNode.nodeType.name)}" data-neos-toggle="tooltip"></i>
-								</f:if>
-								<f:if condition="{nodeInformation.documentNode}">
-									<f:then>
-										<neos:link.node node="{nodeInformation.documentNode}" target="_blank"
-														title="{neos:backend.translate(id: 'workspaces.openPageInWorkspace', source: 'Modules', package: 'Neos.Neos', arguments: {0: nodeInformation.documentNode.workspace.title})}">
-											<span title="{f:render(partial: 'Module/Shared/DocumentBreadcrumb', arguments: {node: nodeInformation.documentNode})}"
-												  data-neos-toggle="tooltip">{nodeInformation.documentNode.label}</span>
-											<i class="icon-external-link"></i>
-										</neos:link.node>
-									</f:then>
-									<f:else>
-										<span><i class="icon-warning" data-neos-toggle="tooltip" data-placement="left"
-												 title="{neos:backend.translate(id: 'media.missingDocumentNode', source: 'Modules', package: 'Neos.Neos')}"></i></span>
-									</f:else>
-								</f:if>
-							</td>
-							<td>
-								<f:if condition="{nodeInformation.node.nodeType.ui.icon}">
-									<i class="{nodeInformation.node.nodeType.ui.icon}"
-									   title="{f:if(condition: nodeInformation.node.nodeType.label, then: '{neos:backend.translate(id: nodeInformation.node.nodeType.label, package: \'Neos.Neos\')}', else: '{nodeInformation.node.nodeType.name}')}"
-									   data-neos-toggle="tooltip" data-placement="left"></i>
-								</f:if>
-								<span title="{nodeInformation.node.path}" data-neos-toggle="tooltip" data-placement="left">{nodeInformation.node.label}</span>
-							</td>
-							<td>
-							<f:if condition="{contentDimensions}">
-								<f:render partial="Module/Shared/NodeContentDimensionsInformation.html" arguments="{contentDimensions: contentDimensions, node: nodeInformation.node}"/>
+		</thead>
+		<tbody>
+			<f:for each="{relatedNodes}" as="site">
+				<f:if condition="{relatedNodes -> f:count()} > 1">
+					<tr class="neos-folder">
+						<td class="neos-priority1" colspan="{f:if(condition: contentDimensions, then: 4, else: 3)}">
+							{neos:backend.translate(id: 'site', package: 'Neos.Neos')}:
+							<span title="{site.site.nodeName}" data-neos-toggle="tooltip">{site.site.name}</span>
+						</td>
+						<td class="neos-priority1 neos-aRight">
+							<i class="fold-toggle icon-chevron-up icon-white" data-toggle="fold-{site.site.nodeName}"></i>
+						</td>
+					</tr>
+				</f:if>
+				<f:for each="{site.documentNodes}" as="documentNode">
+					<tr class="fold-{site.site.nodeName}">
+						<td>
+							<f:if condition="{documentNode.node.nodeType.ui.icon}">
+								<i class="{documentNode.node.nodeType.ui.icon}" title="{f:if(condition: documentNode.node.nodeType.label, then: '{neos:backend.translate(id: documentNode.node.nodeType.label, package: 'Neos.Neos')}', else: documentNode.node.nodeType.name)}" data-neos-toggle="tooltip"></i>
 							</f:if>
-							</td>
-							<td>
-								<f:if condition="{userWorkspace} == {nodeInformation.node.workspace}">
-									<f:then>
-										<i class="icon-user"
-										   title="{neos:backend.translate(id: 'workspaces.personalWorkspace', source: 'Modules', package: 'Neos.Neos')}"
-										   data-neos-toggle="tooltip"></i>
-									</f:then>
-									<f:else>
-										<f:if condition="{nodeInformation.node.workspace.privateWorkspace}">
+							<f:if condition="{documentNode.node}">
+								<span title="{f:render(partial: 'Module/Shared/DocumentBreadcrumb', arguments: {node: documentNode.node})}" data-neos-toggle="tooltip">{documentNode.node.label}</span>
+							</f:if>
+						</td>
+						<td>
+							<ul>
+								<f:for each="{documentNode.nodes}" as="relatedNode">
+									<li>
+										<f:if condition="{relatedNode.node.nodeType.ui.icon}">
+											<i class="{relatedNode.node.nodeType.ui.icon}" title="{f:if(condition: relatedNode.node.nodeType.label, then: '{neos:backend.translate(id: relatedNode.node.nodeType.label, package: 'Neos.Neos')}', else: '{relatedNode.node.nodeType.name}')}" data-neos-toggle="tooltip" data-placement="left"></i>
+										</f:if>
+										<span title="{relatedNode.node.path}" data-neos-toggle="tooltip" data-placement="left">{relatedNode.node.label}</span>
+									</li>
+								</f:for>
+							</ul>
+						</td>
+						<td>
+							<ul>
+								<f:for each="{documentNode.nodes}" as="relatedNode">
+									<li>
+										<f:if condition="{relatedNode.contextDocumentNode}">
 											<f:then>
-												<i class="icon-shield"
-												   title="{neos:backend.translate(id: 'workspaces.privateWorkspace', source: 'Modules', package: 'Neos.Neos')}"
-												   data-neos-toggle="tooltip"></i>
+												<f:if condition="{relatedNode.accessible}">
+													<neos:link.node node="{relatedNode.contextDocumentNode}" target="_blank" title="{neos:backend.translate(id: 'workspaces.openPageInWorkspace', source: 'Modules', package: 'Neos.Neos', arguments: {0: relatedNode.nodeData.workspace.title})}"><i class="icon-external-link"></i></neos:link.node>
+												</f:if>
 											</f:then>
 											<f:else>
-												<i class="icon-group"
-												   title="{neos:backend.translate(id: 'workspaces.internalWorkspace', source: 'Modules', package: 'Neos.Neos')}"
-												   data-neos-toggle="tooltip"></i>
+												<span><i class="icon-warning" data-neos-toggle="tooltip" data-placement="left" title="{neos:backend.translate(id: 'missingDocumentNode', package: 'Neos.Media.Browser')}"></i></span>
 											</f:else>
 										</f:if>
-									</f:else>
-								</f:if>
-								<span title="{nodeInformation.node.workspace.name}" data-neos-toggle="tooltip">{nodeInformation.node.workspace.title -> f:format.crop(maxCharacters: 25, append: '…')}</span>
+									</li>
+								</f:for>
+							</ul>
+						</td>
+						<f:if condition="{contentDimensions}">
+							<td>
+								<ul>
+									<f:for each="{documentNode.nodes}" as="relatedNode">
+										<li>
+											<f:render partial="Module/Shared/NodeContentDimensionsInformation.html" arguments="{contentDimensions: contentDimensions, node: relatedNode.nodeData}" />
+										</li>
+									</f:for>
+								</ul>
 							</td>
-							<td class="neos-aRight">
-								<span title="{nodeInformation.node.lastModificationDateTime -> f:format.date(format: 'Y-m-d H:i')}"
-									  data-neos-toggle="tooltip">{nodeInformation.node.lastModificationDateTime -> m:format.relativeDate()}</span>
-							</td>
-						</tr>
-					</f:for>
-			</tbody>
-		</table>
-	</f:for>
+						</f:if>
+						<td>
+							<ul>
+								<f:for each="{documentNode.nodes}" as="relatedNode">
+									<li>
+										<f:if condition="{userWorkspace} === {relatedNode.nodeData.workspace}">
+											<f:then>
+												<i class="icon-user" title="{neos:backend.translate(id: 'workspaces.personalWorkspace', package: 'Neos.Neos')}" data-neos-toggle="tooltip"></i>
+											</f:then>
+											<f:else>
+												<f:if condition="{relatedNode.accessible}">
+													<f:then>
+														<f:if condition="{relatedNode.nodeData.workspace.privateWorkspace}">
+															<f:then>
+																<i class="icon-shield" title="{neos:backend.translate(id: 'workspaces.privateWorkspace', source: 'Modules', package: 'Neos.Neos')}" data-neos-toggle="tooltip"></i>
+															</f:then>
+															<f:else>
+																<i class="icon-group" title="{neos:backend.translate(id: 'workspaces.internalWorkspace', source: 'Modules', package: 'Neos.Neos')}" data-neos-toggle="tooltip"></i>
+															</f:else>
+														</f:if>
+													</f:then>
+													<f:else>
+														<i class="icon-lock" title="{neos:backend.translate(id: 'noAccessToWorkspace', package: 'Neos.Media.Browser', arguments: {0: relatedNode.nodeData.workspace.title})}" data-neos-toggle="tooltip"></i>
+													</f:else>
+												</f:if>
+											</f:else>
+										</f:if>
+										<span title="{relatedNode.nodeData.workspace.name}" data-neos-toggle="tooltip">{relatedNode.nodeData.workspace.title -> f:format.crop(maxCharacters: 25, append: '…')}</span>
+									</li>
+								</f:for>
+							</ul>
+						</td>
+						<td class="neos-aRight">
+							<ul>
+								<f:for each="{documentNode.nodes}" as="relatedNode">
+									<li>
+										<span title="{relatedNode.node.lastModificationDateTime -> f:format.date(format: 'Y-m-d H:i')}" data-neos-toggle="tooltip">{relatedNode.node.lastModificationDateTime -> m:format.relativeDate()}</span>
+									</li>
+								</f:for>
+							</ul>
+						</td>
+					</tr>
+				</f:for>
+			</f:for>
+		</tbody>
+	</table>
 
 	<div class="neos-footer">
 		<!-- TODO: Find a nicer way to send the referer for a get request -->
@@ -167,7 +142,7 @@
 		(function($) {
 			$('.fold-toggle').click(function() {
 				$(this).toggleClass('icon-chevron-down icon-chevron-up');
-				$($(this).data('toggle')).toggle();
+				$('tr.' + $(this).data('toggle')).toggle();
 			});
 		})(jQuery);
 	</script>
